--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.29.0",
     "sass": "^1.49.9"
   },
   "devDependencies": {
