--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.2",
