--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@strapi/provider-upload-cloudinary": "^4.1.7",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
+    "firebase": "^9.6.10",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.2",
