--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@googlemaps/react-wrapper": "^1.1.31",
     "@strapi/provider-upload-cloudinary": "^4.1.7",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
