--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@strapi/provider-upload-cloudinary": "^4.1.7",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
-    "firebase": "^9.6.10",
+    "firebase": "^9.8.1",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.2",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.1"
+    "eslint-config-next": "12.1.1",
+    "eslint-plugin-react": "^7.29.4"
   }
 }
