--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "firebase": "^9.8.1",
+    "firebase-admin": "^10.2.0",
+    "firebase-functions": "^3.21.0",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.2",
@@ -26,8 +28,13 @@
     "sass": "^1.49.9"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "cross-env": "^7.0.3",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
-    "eslint-plugin-react": "^7.29.4"
+    "eslint-plugin-react": "^7.29.4",
+    "rimraf": "^3.0.2"
   }
 }
