--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,10 @@
 {
   "hosting": {
-    "public": "public",
-    "rewrites": [
-      {
-        "source": "**/**",
-        "function": "nextjs-server"
-      }
+    "public": "out",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
     ]
   },
   "functions": {
