--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-bootstrap": "^2.2.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "sharp": "^0.30.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
